# Cosmopilot

./: .env.example  .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  main.py  requirements.txt
.github/: pull_request_template.md
agents/: README.md
backend/: README.md  app.py  requirements.txt
data/: eval_dataset.csv  eval_dataset.jsonl
docs/: evaluations-in-foundry.md  evaluations.md  tools-roadmap.md  tools.md
evaluations/: README.md  pyproject.toml  report.py  runner.py
evaluations/adventure-works-agent/: agent.py  run-agent.py
evaluations/adventure-works-agent/evaluators/: agent.py  azure_openai_graders.py  general_purpose.py  rag.py  risk_safety.py  rubric.py  textual_similarity.py
evaluations/adventure-works-agent/prompts/: system-prompt-v2-concise.txt
evaluations/adventure-works-agent/test-prompts/: ambiguous-hiking-gear.txt  family-london-trails.txt  five-day-backpacking.txt  incomplete-scotland-trip.txt  scottish-highlands-march.txt
evaluations/agents/: __init__.py  base.py  foundry_agent.py
evaluations/config/: model_config.yaml  project_config.yaml  thresholds.yaml
evaluations/datasets/per_agent/: adventure-works.jsonl
evaluations/datasets/shared/: safety_prompts.jsonl
evaluations/evals/: __init__.py  domain_accuracy.py  response_format.py  suites.py  tone.py
evaluations/redteam/: __init__.py  runner.py
evaluations/simulators/: __init__.py  adversarial_gen.py  synthetic_gen.py
frontend/: README.md  index.html  package-lock.json  (+2 more)
(+108 files in other folders)
